--- a/css/styles.css
+++ b/css/styles.css
@@ -52,6 +52,9 @@ body {
 	color: var(--color-white);
 	background-color: var(--color-iris);
 	cursor: pointer;
+	min-width: 169px;
+	height: 56px;
+	padding: 16px 32px;
 }
 .btn:hover,
 .btn:focus{
@@ -75,6 +78,18 @@ body {
 }
 
 /* Header styles */
+.header-wrap{
+	display: flex;
+}
+.navigation-wrap{
+	display: flex;
+	margin-left: 156px;
+	align-items: center;
+}
+.header-list-wrap{
+	display: flex;
+	gap: 40px;
+}
 .header-link{
 	font-weight: 500;
 	color: var(--color-grey);
@@ -83,8 +98,14 @@ body {
 .header-link:focus {
 	color: var(--color-ocean);
 }
+.header-address-wrap{
+	display: flex;
+	align-items: center;
+	gap: 40px;
+}
 .header-address{
 	font-style: normal;
+	margin-left: auto;
 }
 .header-contact{
 	color: var(--color-slate);
@@ -113,11 +134,52 @@ body {
 	text-align: center;
 	letter-spacing: 0.02em;
 	color: var(--color-white);
+	width: 496px;
+	height: 120px;
+	padding: 188px 472px 48px;
+}
+.hero-btn{
+	margin-left:668px;
+	margin-bottom: 204px;
+}
+
+/* Studio styles */
+.studio{
+	margin-top: 120px;
+	margin-bottom: 120px;
+}
+.studio-wrap{
+	display: flex;
+	gap: 24px;
+	width: calc({100%-72px}/4);
+}
+
+/* Portfolio section styles */
+.portfolio-wrap{
+	display: flex;
+	margin-top: 72px;
+	margin-bottom: 120px;
+	gap:24px;
+	align-items: center;
+	width: calc({100%-48px}/3);
+}
+
+/* Contacts styles */
+.contacts-wrap{
+	padding: 120px 156px;
+}
+
+.contacts-list-wrap{
+	display: flex;
+	margin-top: 72px;
+	gap:24px;
+	width: calc({100%-72px}/4);
 }
 
 /* Footer styles */
 .footer{
 	background-color: var(--color-navy-blue);
+	padding: 100px 1020px 100px 156px;
 }
 .footer-text{
 	color: var(--color-cloud);
@@ -127,6 +189,11 @@ body {
 }
 .footer-logo-studio{
 	color: var(--color-cloud);
+}
+
+.footer-wrap{
+	margin-top: 16px;
+	max-width: 264px;
 }
 
 /* Filters Styles */
@@ -146,6 +213,13 @@ body {
 	background-color: var(--color-ocean);
 }
 
+.filters-wrap{
+	display: flex;
+	align-items: center;
+	margin-top: 96px;
+	gap:24px;
+}
+
 /* Project Card styles */
 .project-card {
 	background-color: var(--color-cloud);
@@ -155,4 +229,11 @@ body {
 }
 .project-card-text{
 	color: var(--color-slate);
+}
+.project-card-wrap{
+	display: flex;
+	margin-top: 72px;
+	margin-bottom: 120px;
+	gap: 24px 48px;
+	flex-wrap: wrap;
 }
